Final Test Revisions
Wasn't sure how to fix the css without breaking the css so i just touched up the homepage to make it less barren

--- a/AngularGameDatabase/client/homegamepage.html
+++ b/AngularGameDatabase/client/homegamepage.html
@@ -18,7 +18,11 @@
 </nav>
     <div class="homegame"></div>
     <main>
-            <p>This is the homepage for the Game Library Database. Use the link on the top left in order to go to the page to either enter the information about a game, or to retrieve the info of previously entered games.</p>
+            <p>This is the homepage for the Game Library Database. Use the links on the top left in order to go to the other pages, with their purposes listed below.</p>
+            <ul id="hpul">Home: Return to this page</ul>
+            <ul id="hpul">Browse Games: Individually look through each game</ul>
+            <ul id="hpul">Input your Game: Form for inserting a new game</ul>
+            <ul id="hpul">Game List: View a list of every game, along with the ability to delete and edit games from the list</ul>
     </div>
     </main> 
     </body>
